--- a/style.css
+++ b/style.css
@@ -10,8 +10,9 @@
 body {
   width: 100vw;
   height: 100vh;
-  background-image: url(./images/background.png);
-  background-position: center;
+  /* background-image: url(./images/background.png); */
+  background-color: rgb(12, 39, 50);
+  /* background-position: center;   */
   background-size: cover;
   padding: 0 8%;
 }
@@ -24,6 +25,7 @@ body {
   width: 7.5em;
   padding: 20px 0;
   cursor: pointer;
+  color: #ff3753;
 }
 
 .content {
@@ -80,6 +82,21 @@ body {
   right: 10%;
   bottom: 0;
   animation: rocket 4s linear infinite;
+}
+footer{
+  position: absolute;
+  bottom: 0;
+  width: 80%;
+  text-align: center;
+  padding: 20px 0;
+  color: #fff;
+
+}
+a{
+  color: #ff3753;
+  text-decoration: none;
+  font-weight: bold;
+
 }
 
 @keyframes rocket {
